objects/LLC_BI__Loan_Compliance__c.object
<CustomObject>
    <description>The Loan Compliance object holds data necessary to ensure compliance for a loan.</description>
    <fields>
        <fullName>HMDA_State_Code__c</fullName>
        <description>Field to capture State Code for HMDA Reporting.</description>
        <inlineHelpText>This is a 2-digit field used by the Census Bureau that can be obtained from the Flood Certificate.</inlineHelpText>
        <label>HMDA State Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Financed__c</fullName>
        <description>The system automatically populates this field to display the Regulation Z amount of credit provided to the borrower or on the borrower’s behalf. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of credit provided to the borrower.</inlineHelpText>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_of_Circumstance_Date__c</fullName>
        <description>The system automatically populates this optional field to indicate the date of the acceptable change of circumstance that causes a tolerance breach. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field indicates the date of the acceptable change of circumstance that causes a tolerance breach.</inlineHelpText>
        <label>Change of Circumstance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closing_Disclosure_Delivery_Method__c</fullName>
        <description>Users populate this optional picklist field to indicate the delivery method the financial institution uses to provide the closing disclosure to the applicant. By default, this field is blank.</description>
        <inlineHelpText>Select the closing disclosure delivery method for the loan.</inlineHelpText>
        <label>Closing Disclosure Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>In-person</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Action_Taken_Date__c</fullName>
        <description>The system automatically populates this optional text field to indicate the date for when the Action Taken occurred. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to indicate the date for when the Action Taken occurred.</inlineHelpText>
        <label>Action Taken Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Action_Taken__c</fullName>
        <description>The system automatically populates this optional picklist field to describe the type of action taken for the application. By default, it is empty.</description>
        <inlineHelpText>Use this field to describe the type of action taken for the application.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Originated</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Approved but not accepted</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Denied</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Withdrawn by the applicant</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Incomplete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Amount_Applied_For_Flag__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate if the applicant provided the initial loan amount or credit limit. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate if the applicant provided the initial loan amount or credit limit.</inlineHelpText>
        <label>Amount Applied For Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>900</fullName>
                    <label>900 - Applicable and reported</label>
                </value>
                <value>
                    <fullName>988</fullName>
                    <label>988 - Applicable but not provided by applicant and otherwise undetermined</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Amount_Applied_For__c</fullName>
        <description>The system automatically populates this optional text field to specify the initial loan amount or credit limit the applicant applied for. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the initial loan amount or credit limit the applicant applied for.</inlineHelpText>
        <label>Amount Applied For</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Amount_Approved__c</fullName>
        <description>The system automatically populates this optional text field to specify the loan amount or credit limit whether approved or originated. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the loan amount or credit limit whether approved or originated.</inlineHelpText>
        <label>Amount Approved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_App_Date__c</fullName>
        <description>Users populate this optional text field to specify the application date. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the application date.</inlineHelpText>
        <label>Application Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_App_Method__c</fullName>
        <description>Users populate this optional picklist field to describe how the applicant submits the application. By default, it is empty.</description>
        <inlineHelpText>Select a value to describe which method the applicant uses to submit the application.</inlineHelpText>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - In-person</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Telephone</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Online</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Mail</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_App_Recipient__c</fullName>
        <description>Users populate this optional picklist field to indicate the application recipient. By default, it is empty.</description>
        <inlineHelpText>Enter one of the specified codes to indicate the application recipient.</inlineHelpText>
        <label>Application Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1 - Directly submitted</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Indirectly submitted via a third party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Credit_Product_FF__c</fullName>
        <description>Users populate this optional text field to specify the other credit product. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the other credit product.</inlineHelpText>
        <label>Credit Type - Credit Product Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Credit_Product__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate the credit product of the loan. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate the credit product of the loan.</inlineHelpText>
        <label>Credit Type - Credit Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Term loan - unsecured</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Term loan - secured</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Line of credit - unsecured</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Line of credit - secured</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Credit card account, not private-label</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Private-label credit card account</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Merchant cash advance</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - Other sales-based financing transaction</label>
                </value>
                <value>
                    <fullName>977</fullName>
                    <label>977 - Other</label>
                </value>
                <value>
                    <fullName>988</fullName>
                    <label>988 - Not provided</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Guarantee_FF__c</fullName>
        <description>Users populate this optional text field to specify the guarantee type. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the guarantee type.</inlineHelpText>
        <label>Credit Type - Guarantee Type Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Guarantee__c</fullName>
        <description>The system automatically populates this optional multi-select picklist field to indicate the type(s) of guarantee. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate the type(s) of guarantee.</inlineHelpText>
        <label>Credit Type - Guarantee Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Personal guarantee - owner(s)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Personal guarantee - non-owner(s)</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - SBA guarantee - 7(a) program</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - SBA guarantee - 504 program</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - SBA guarantee - other</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - USDA guarantee</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - FHA insurance</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - Bureau of Indian Affairs guarantee</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9 - Other Federal guarantee</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - State government guarantee</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 - Local government guarantee</label>
                </value>
                <value>
                    <fullName>977</fullName>
                    <label>977 - Other</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - No guarantee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Loan_Term_Flag__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate whether a loan term is applicable for this application for credit. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate whether a loan term is applicable for this application for credit.</inlineHelpText>
        <label>Credit Type - Loan Term Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>900</fullName>
                    <label>900 - Applicable and reported</label>
                </value>
                <value>
                    <fullName>988</fullName>
                    <label>988 - Applicable but not provided by applicant and otherwise undetermined</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_CT_Loan_Term__c</fullName>
        <description>The system automatically populates this optional text field to specify the number of months in the loan term for products that have a loan term. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the number of months in the loan term for products that have a loan term.</inlineHelpText>
        <label>Credit Type - Loan Term</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Census_Tract_Adr_Type__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate the address type used to determine the census tract. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate the address type used to determine the census tract.</inlineHelpText>
        <label>Census Tract Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Address or location where the loan proceeds will principally be applied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Address or location of borrower&apos;s main office or headquarters</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Another address or location associated with the applicant</label>
                </value>
                <value>
                    <fullName>988</fullName>
                    <label>988 - Not provided by applicant and otherwise undetermined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Census_Tract_Number__c</fullName>
        <description>The system automatically populates this optional text field to store the census tract number. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the census tract number.</inlineHelpText>
        <label>Census Tract Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Credit_Purpose_FF__c</fullName>
        <description>Users populate this optional text field to specify the purpose of the credit applied for or originated. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the purpose of the credit applied for or originated.</inlineHelpText>
        <label>Credit Purpose Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Credit_Purpose__c</fullName>
        <description>The system automatically populates this optional multi-select picklist field to indicate the purpose of the credit applied for or originated. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate the purpose of the credit applied for or originated.</inlineHelpText>
        <label>Credit Purpose</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Purchase, construction/improvement, or refinance of non-owner-occupied real property</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Purchase, construction/improvement, or refinance of owner-occupied real property</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Purchase, refinance, or rehabilitation/repair of motor vehicle(s) (including light and heavy trucks)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Purchase, refinance, or rehabilitation/repair of equipment</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Working capital (including inventory or floor planning)</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Business start-up</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Business expansion</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - Business acquisition</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9 - Refinance existing debt (other than refinancings listed above)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - Line increase</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11 - Overdraft</label>
                </value>
                <value>
                    <fullName>977</fullName>
                    <label>977 - Other</label>
                </value>
                <value>
                    <fullName>988</fullName>
                    <label>988 - Not provided by applicant and otherwise undetermined</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Denial_Reason_FF__c</fullName>
        <description>The system automatically populates this optional text field to specify the denial reason(s). By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the denial reason(s).</inlineHelpText>
        <label>Denial Reason Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Denial_Reason__c</fullName>
        <description>The system automatically populates this optional multi-select picklist field to identify the principal denial reason(s). By default, it is empty.</description>
        <inlineHelpText>Select value(s) to identify the principal denial reason(s).</inlineHelpText>
        <label>Denial Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Credit characteristics of the business</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Credit characteristics of the principal owner(s) or guarantor(s)</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Use of credit proceeds</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Cashflow</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Collateral</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Time in business</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Government loan program criteria</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - Aggregate exposure</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>9 - Unverifiable information</label>
                </value>
                <value>
                    <fullName>977</fullName>
                    <label>977 - Other</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Broker_Fees__c</fullName>
        <description>The system automatically populates this optional text field to specify the dollar amount of total broker fees. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the dollar amount of total broker fees.</inlineHelpText>
        <label>Broker Fees</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Fixed_Rate__c</fullName>
        <description>The system automatically populates this optional text field with a percentage to specify the fixed interest rate. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the fixed interest rate.</inlineHelpText>
        <label>Fixed Rate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Init_Rate_Period__c</fullName>
        <description>The system automatically populates this optional text field to specify the number of months the initial rate is active. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the number of months the initial rate is active.</inlineHelpText>
        <label>Initial Rate Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Initial_Charges__c</fullName>
        <description>The system automatically populates this optional text field to specify the dollar amount of total non-interest charges imposed over the first annual period. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the dollar amount of total non-interest charges imposed over the first annual period.</inlineHelpText>
        <label>Initial Charges</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Interest_Rate_Type__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate the loan’s interest rate type. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate the loan’s interest rate type.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Variable interest rate, no initial rate period</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Fixed interest rate, no initial rate period</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Variable interest rate, initial rate period &gt; 12 months</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Fixed interest rate, initial rate period &gt; 12 months</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Variable interest rate, initial rate period &lt;= 12 months</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Fixed interest rate, initial rate period &lt;= 12 months</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_MCA_Addcost_Flag__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate whether the Merchant Cash Advance (MCA) or other sales-based financing transaction cost is applicable. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate whether the Merchant Cash Advance (MCA) or other sales-based financing transaction cost is applicable.</inlineHelpText>
        <label>MCA Addcost Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>900</fullName>
                    <label>900 - Applicable</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_MCA_Addcost__c</fullName>
        <description>The system automatically populates this optional text field to specify the dollar difference between the advanced amount and the repayment amount. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the dollar difference between the advanced amount and the repayment amount.</inlineHelpText>
        <label>MCA Addcost</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Origination_Charges__c</fullName>
        <description>The system automatically populates this optional text field to specify the dollar amount of total origination charges. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the dollar amount of total origination charges.</inlineHelpText>
        <label>Origination Charges</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Prepenalty_Allowed__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate whether a prepayment penalty is allowed for this application. By default, it is empty.</description>
        <inlineHelpText>Use this optional picklist field to indicate whether a prepayment penalty is allowed for this application.</inlineHelpText>
        <label>Prepenalty Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Yes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - No</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Prepenalty_Exists__c</fullName>
        <description>The system automatically populates this optional picklist field to indicate whether the transaction terms include a prepayment penalty. By default, it is empty.</description>
        <inlineHelpText>Select a value to indicate whether the transaction terms include a prepayment penalty.</inlineHelpText>
        <label>Prepenalty Exists</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Yes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - No</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - Not applicable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__DF1071_Pricing_Var_Index_Name_FF__c</fullName>
        <description>The system automatically populates this optional text field to specify the other adjustable rate index name. By default, it is empty.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this field to specify the other variable index name.</inlineHelpText>
        <label>Adjustable Rate Index Name Free Form</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>